# BabyFace

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties
app/: build.gradle  config.xml.template  proguard-rules.pro
app/gradle/wrapper/: gradle-wrapper.properties
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: slide_in.xml  slide_in_from_bottom.xml  slide_in_from_top.xml  slide_out_to_bottom.xml  slide_out_to_left.xml  slide_out_to_top.xml
app/src/main/res/drawable/: circle_not_selected.xml  circle_selected.xml  list_divider.xml  selector_accent.xml  selector_dark_gray.xml  selector_google_red.xml  selector_next_button.xml  selector_primary.xml  selector_red.xml  selector_white.xml
app/src/main/res/drawable-v21/: selector_accent.xml  selector_dark_gray.xml  selector_google_red.xml  selector_red.xml
app/src/main/res/layout/: activity_capture_photo.xml  activity_face_overview.xml  activity_face_settings.xml  activity_faces_overview.xml  activity_import_faces.xml  activity_login.xml  activity_main.xml  activity_main_drawer.xml  activity_new_face.xml  activity_reminder_settings.xml  activity_show_photos.xml  activity_show_videos.xml  activity_video_conversion.xml  divider.xml  fragment_about.xml  item_photo.xml  (+17 more)
gradle/wrapper/: gradle-wrapper.properties
imgproc/detector/: CMakeLists.txt  facedetector.cpp  facedetector.h  imageprocessor.cpp  imageprocessor.h  main.cpp
playstore/screenshots/en/: export.sh
server/: build.gradle  configuration.yml  configuration.yml.template  setup.sh
server/gradle/wrapper/: gradle-wrapper.properties
(+119 files in other folders)
